--- a/public/.htaccess
+++ b/public/.htaccess
@@ -20,10 +20,10 @@ SetOutputFilter DEFLATE
     # Redirect Trailing Slashes...
     RewriteRule ^(.*)/$ /$1 [L,R=301]
 
-    # send traffic to the app
+    # Handle Front Controller...
+    RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    #RewriteRule ^ index.php [L]
-    RewriteRule ^ index_dev.php [L]
+    RewriteRule ^ index.php [L]
 </IfModule>
 
 <IfModule mod_headers.c>
