--- a/composer.json
+++ b/composer.json
@@ -4,29 +4,34 @@
 	"description"	: "Creative Business Network",
     "keywords"		: ["framework"],
 	"require": {
-		"php"					: ">=5.3.3",
-		"doctrine/dbal"			: "~2.3",
-		"silex/silex"			: "~1.2",
-		"symfony/config"		: "~2.2",
-		"symfony/console"		: "~2.2",
-		"symfony/form"			: "~2.2",
-		"symfony/security"		: "~2.2",
-		"symfony/translation"	: "~2.2",
-		"symfony/twig-bridge"	: "~2.2",
-		"symfony/validator"		: "~2.2",
-		"symfony/yaml"			: "~2.2",
-		"twig/twig"				: "~1.15"
+		"php"					: ">=5.5",
+		"laravel/framework"		: "4.1.*"
 	},
-	"require-dev": {
-		"symfony/browser-kit"	: "~2.2",
-		"symfony/css-selector"	: "~2.2",
-		"symfony/dom-crawler"	: "~2.2"
+	"autoload": {
+		"classmap": [
+			"app/commands",
+			"app/controllers",
+			"app/models",
+			"app/database/migrations",
+			"app/database/seeds",
+			"app/tests/TestCase.php"
+		]
 	},
-	"autoload":	{
-		"psr-0": {
-			"Controller"		: "src/",
-			"Model"				: "src/",
-			"View"				: "src/"
-		}
-	}
+	"scripts": {
+		"post-install-cmd": [
+			"php artisan clear-compiled",
+			"php artisan optimize"
+		],
+		"post-update-cmd": [
+			"php artisan clear-compiled",
+			"php artisan optimize"
+		],
+		"post-create-project-cmd": [
+			"php artisan key:generate"
+		]
+	},
+	"config": {
+		"preferred-install": "dist"
+	},
+	"minimum-stability": "stable"
 }
