--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	"description"	: "Creative Business Network",
     "keywords"		: ["framework"],
 	"require": {
-		"laravel/framework"		: "4.1.*"
+		"laravel/framework"		: "4.1.*",
+		"nesbot/Carbon"			: "1.8.*"
 	},
 	"autoload": {
 		"classmap": [
