--- a/.ebextensions/01migrate.config
+++ b/.ebextensions/01migrate.config
@@ -1,4 +1,4 @@
 container_commands:
   artisanmigrate:
-    command: "php artisan migrate"
+    command: "php /var/app/ondeck/webroot artisan migrate"
     leader_only: true
