Try to get composer working on AWS

--- a/.ebextensions/composer.config
+++ b/.ebextensions/composer.config
@@ -1,8 +1,7 @@
-commands:
-  01updateComposer:
-    command: export COMPOSER_HOME=/root && /usr/bin/composer.phar self-update
-
-option_settings:
-  - namespace: aws:elasticbeanstalk:application:environment
-    option_name: COMPOSER_HOME
-    value: /root
+container_commands:
+ "1-install-composer":
+   command: "cd /var/app/ondeck/webroot; curl -s http://getcomposer.org/installer | php"
+ "2-install-dependencies":
+   command: "cd /var/app/ondeck/webroot; php composer.phar install"
+ "3-cleanup-composer":
+   command: "rm -Rf /var/app/ondeck/webroot/composer.*"
