Artisan on AWS (again)

--- a/.ebextensions/02migrate.config
+++ b/.ebextensions/02migrate.config
@@ -1,4 +1,4 @@
 container_commands:
-  artisanmigrate:
+  "4-artisanmigrate":
     command: "php /var/app/ondeck/webroot/artisan migrate"
     leader_only: true
